--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Suru Admin Dashboard</title>
+    <title>Suru Admin || Suruhub For Admin || Become A Suru Admin</title>
   </head>
   <body>
     <div id="root"></div>
